--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:h2:mem:vgs_challengedb;DB_CLOSE_ON_EXIT=FALSE;MODE=Po
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen databas
@@ -12,4 +13,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 ## Spring extra properties
-server.port=8092
+server.port=8030
